--- a/cipher.html
+++ b/cipher.html
@@ -19,11 +19,7 @@
                 <input type="text" id="key" class="form-control my-3" placeholder="Enter key...">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="keepSpaces">
-                    <label class="form-check-label" for="keepSpaces">Keep spaces</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="keepPunctuation">
-                    <label class="form-check-label" for="keepPunctuation">Keep punctuation</label>
+                    <label class="form-check-label" for="keepSpaces">Keep spaces and punctuations</label>
                 </div>
                 <button class="btn btn-primary btn-lg mx-2 my-3" onclick="handleEncrypt()">Cipher</button>
             </div>
